# koan

./: .gitattributes  .gitignore  Cargo.toml  Claude.md  DECISIONS.md  README.md  ROADMAP.md  TEST.md  TUTORIAL.md  enter.sh  interpreter.py  interpreter_notes.py  rust-toolchain.toml
.claude/: settings.json
.githooks/: pre-commit
design/: README.md  compilation.md  effects.md  error-handling.md  execution-model.md  expressions-and-parsing.md  functional-programming.md  memory-model.md  metaprogramming.md  module-system.md  operators.md  per-call-arena-protocol.md  per-node-memory.md  scheduler-library.md  tail-call-optimization.md  type-system.md  value-substrates.md  witness-hosting.md  workcell.md
koan/: __init__.py  interpreter.py
observe/: complexity.txt  coverage.lcov  coverage.txt  doc_graph.dot  miri_slate.md  precommit-coverage.lcov  precommit-modules.dot
roadmap/: README.md  anonymous-functions.md  arena-heap-pinning.md  bindings-facade.md  branch-arm-return-type.md  chained-type-binding-let-panic.md  container-type-parameterization.md  crate-module-restructure-runtime-grouping.md  deferred-surface-items.md  deprecate-if-then.md  dispatch-fallback-misleading-diagnostic.md  dispatch-time-placeholders.md  eager-type-elaboration.md  early-return.md  error-handling.md  files-and-imports.md  fold-dispatcher.md  group-based-operators.md  kfunction-deferred-ret-precision.md  ktype-and-dispatcher-split.md  ktype-split.md  leak-fix-audit.md  lexical-ordering.md  lift-and-schedule-dedup.md  module-system-0-cleanup.md  module-system-1-module-language.md  module-system-1.5-scheduler.md  module-system-2-functors.md  module-system-2-scheduler.md  module-system-3-first-class-modules.md  module-system-4-axioms-and-generators.md  module-system-5-modular-implicits.md  module-system-6-equivalence-checking.md  module-system-7-syntax-tuning.md  module-system-dependent-param-annotations.md  module-system-functor-params.md  module-system.md  monadic-side-effects.md  named-arg-signature-satisfaction.md  pending-queue-facade.md  (+37 more)
scripts/: migrate_type_sigil.py
src/: ast.rs  builtins.rs  dispatch.rs  execute.rs  fold_fixture.rs  kexpression.rs  klist.rs  kloop.rs  kobject.rs  kstring.rs  ktask.rs  ktraits.rs  lib.rs  machine.rs  main.rs  monad.rs  parse.rs  runtime.rs  scheduler.rs  step_fixture.rs  witnessed.rs
tests/: chained_operator_restamp.rs  compile_fail.rs  dict_bind_pin.rs  eager_wrap_resolve.rs  forward_reference_resolves.rs  functor_binder_e2e.rs  functor_e2e.rs  list_bind_pin.rs  rebind_errors.rs  record_bind_pin.rs  sig_fn_top_level_no_panic.rs  tagged_wrapped_bind_pin.rs  type_language_sigil.rs  type_language_union.rs
tools/: complexity.txt  coverage.py  doclinks.py  miri.py  modgraph.py  modgraph_rewrite.py  observe_tests.py  seam_equivalence.sh  verify.sh  verify_snippets.py
tutorial/: 01-getting-started.md  02-values-and-types.md  03-names-and-dispatch.md  04-functions.md  05-tagged-unions.md  06-pattern-matching.md  07-records.md  08-newtypes.md  09-errors.md  10-quoting.md  11-modules.md  12-functors.md  README.md  reference.md
workgraph/: Cargo.toml
(+908 files in other folders)
