[workspace]
members = ["workgraph"]
default-members = [".", "workgraph"]
resolver = "2"

[package]
name = "koan"
version = "0.1.0"
edition = "2021"

[lib]
name = "koan"
path = "src/lib.rs"

[[bin]]
name = "koan"
path = "src/main.rs"

[dependencies]
regex = "1.12.3"
indexmap = "2"
mimalloc = { version = "0.1", default-features = false }
stable_deref_trait = "1.2.1"
workgraph = { path = "workgraph" }
blake3 = "1.8.5"
# Persistent HAMT for the type registry's node table. No features: the optional `triomphe`
# feature swaps the default shared pointer to an atomic one, and the registry is single-threaded
# per run frame, so it instantiates the map over `archery::RcK` instead.
imbl = "7"

[dev-dependencies]
workgraph = { path = "workgraph", features = ["test-hooks"] }
trybuild = "1.0"
