[workspace]
members = ["workgraph"]
default-members = [".", "workgraph"]
resolver = "2"

[package]
name = "koan"
version = "0.1.0"
edition = "2021"

[lib]
name = "koan"
path = "src/lib.rs"

[[bin]]
name = "koan"
path = "src/main.rs"

[features]
# Escape-seam verification builds — mutually exclusive (a `compile_error!` guards the pair).
# Force every record escape seam to a single verb so the output-asserting suite becomes an
# equivalence battery: identical hardcoded expectations under each prove the policy is
# semantically invisible.
seam-force-copy = []   # escape seam always copies records
seam-force-pin  = []   # escape seam always pins records

[dependencies]
regex = "1.12.3"
indexmap = "2"
mimalloc = { version = "0.1", default-features = false }
stable_deref_trait = "1.2.1"
workgraph = { path = "workgraph" }
blake3 = "1.8.5"
# Persistent HAMT for the type registry's node table. No features: the optional `triomphe`
# feature swaps the default shared pointer to an atomic one, and the registry is single-threaded
# per run frame, so it instantiates the map over `archery::RcK` instead.
imbl = "7"
# Frozen entry table behind a `KObject::Dict` value. Chosen over `std` for its stable custom-
# allocator seam (`allocator-api2`, default-on): the region-resident dict substrate stores a
# `Global`-allocated table today, and the future untyped-bump-arena `Allocator` swaps to
# `HashMap::new_in(region_alloc)` with zero payload churn. Default features supply the
# `DefaultHashBuilder` hasher over `KKey`'s manual `Hash`.
hashbrown = "0.17"

[dev-dependencies]
workgraph = { path = "workgraph", features = ["test-hooks"] }
trybuild = "1.0"
